--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,13 +1,14 @@
 name: Generate Snake
 
 on:
-  schedule: # roda a cada 24 horas
-    - cron: "0 0 * * *"
-  workflow_dispatch:
+  schedule: # roda automaticamente todo dia às 23h UTC
+    - cron: "0 23 * * *"
+  workflow_dispatch: # permite rodar manualmente
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -18,7 +19,7 @@ jobs:
           github_user_name: souzzadev
           outputs: dist/snake.svg
 
-      - name: Push Snake to the output branch
+      - name: Deploy Snake to output branch
         uses: crazy-max/ghaction-github-pages@v4
         with:
           target_branch: output
