--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,26 +1,30 @@
 name: Generate Snake
 
 on:
-  schedule: # roda automaticamente todo dia às 23h UTC
-    - cron: "0 23 * * *"
+  schedule:
+    - cron: "0 23 * * *" # roda todo dia às 23h UTC
   workflow_dispatch: # permite rodar manualmente
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - name: Checkout do repositório
+        uses: actions/checkout@v2
 
-      - name: Generate Snake
-        uses: Platane/snk@v3
+      - name: Configurar Node.js
+        uses: actions/setup-node@v2
         with:
-          github_user_name: souzzadev
+          node-version: "16"
+
+      - name: Gerar animação da cobrinha
+        uses: Platane/snk@master
+        with:
+          github_user_name: ${{ github.repository_owner }}
           outputs: dist/snake.svg
 
-      - name: Deploy Snake to output branch
-        uses: crazy-max/ghaction-github-pages@v4
+      - name: Publicar no branch output
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
