--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,8 @@
 name: Generate Snake
 
 on:
-  schedule:
-    - cron: "0 23 * * *" # roda todo dia às 23h UTC
+  schedule: # roda automaticamente todo dia às 23h UTC
+    - cron: "0 23 * * *"
   workflow_dispatch: # permite rodar manualmente
 
 jobs:
@@ -10,23 +10,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout do repositório
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Configurar Node.js
-        uses: actions/setup-node@v2
+      - name: Generate Snake animation
+        uses: Platane/snk@v3
         with:
-          node-version: "16"
-
-      - name: Gerar animação da cobrinha
-        uses: Platane/snk@master
-        with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: Souzzadev
           outputs: dist/snake.svg
 
-      - name: Publicar no branch output
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: Publicar snake.svg no branch output
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
